--- a/Brayan_Prueba/styles.css
+++ b/Brayan_Prueba/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #ff6f00;
+    background-color: #f2ff00;
     color: #fff;
     padding: 20px;
     text-align: center;
